[media-source] Fix imported/w3c/web-platform-tests/media-source/mediasource-config-change-mp4-av-audio-bitrate.html https://bugs.webkit.org/show_bug.cgi?id=162052

Reviewed by Brent Fulgham.

Source/WebCore:

Fixes tests: imported/w3c/web-platform-tests/media-source/mediasource-config-change-mp4-av-audio-bitrate.html
             imported/w3c/web-platform-tests/media-source/mediasource-config-change-mp4-av-video-bitrate.html

The above tests would throw an assertion while trying to invert a range with an invalid end time. Check the
validity of trackBuffer.lastEnqueuedPresentationTime before comparing it and assigning it to a range.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::removeCodedFrames):

LayoutTests:

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/180210@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206037 268f45cc-cd09-0410-ab3c-d52691b4dbfc